updated Readme With more Details

--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@
 <body>
     <h1>niihit</h1>
 </body
+clone an existing repository from local machine to github
+q2= make change to a file in a local repo commit the changes and push them to github 
