--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
 </body
 clone an existing repository from local machine to github
 q2= make change to a file in a local repo commit the changes and push them to github 
+echo "This is file one" > file1.txt
